Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 12.0.0-beta1
-
-
a47150f5b (master)
Description
The "Issues" pane can differentiate build errors and Clangd issues. Treating Clang Tidy (plus Clazy) scan output for open files like code model issues would be nice.
Otherwise, we need to visit & scroll each file to see if Clang Tidy has something to tell, and to be able to have it all under the Issues tab we need to run Tidy over the entire codebase.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-31106 Clang Tidy issues for open files do not appear in "Issues" pane
-
- Closed
-