ClangTools: Let document tool runner create entries in the issues pane

Fixes: QTCREATORBUG-29789
Change-Id: I886f6ca9b43c550f559ff31f9953b2c055cc18c7
Reviewed-by: David Schulz <david.schulz@qt.io>